Incorrect embedded SVG image sizing on first load https://bugs.webkit.org/show_bug.cgi?id=99489

Reviewed by Nikolas Zimmermann.

Source/WebCore:

RenderSVGImage::updateImageViewport() must be called after the image loader is finished,
to ensure that a SVGImageCache::SizeAndScalesMap entry is created even if layout has
already been performed.

Test: svg/custom/svg-image-initial-size.html

* rendering/svg/RenderSVGImage.cpp:
(WebCore::RenderSVGImage::imageChanged):

LayoutTests:

* svg/custom/svg-image-initial-size-expected.html: Added.
* svg/custom/svg-image-initial-size.html: Added.


Canonical link: https://commits.webkit.org/118002@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132069 268f45cc-cd09-0410-ab3c-d52691b4dbfc